[none] renaming github action workflows name

--- a/.github/workflows/pull-request.pr-labeler.yml
+++ b/.github/workflows/pull-request.pr-labeler.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
-  pr-labeler:
+  pull-request-pr-labeler:
     if: ${{ github.event.action == 'opened' }}
     runs-on: ubuntu-latest
     steps:
