--- a/.github/workflows/pull-request.auto-assignee.yml
+++ b/.github/workflows/pull-request.auto-assignee.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, reopened]
 
 jobs:
-  add_assignees:
+  pull-request-auto-assignee:
     runs-on: ubuntu-latest
     steps:
       - uses: actions-ecosystem/action-add-assignees@v1
