--- a/.github/workflows/pull-request.auto-assignee.yml
+++ b/.github/workflows/pull-request.auto-assignee.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   pull-request-auto-assignee:
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - uses: actions-ecosystem/action-add-assignees@v1
         with:
