--- a/.github/workflows/pull-request.pr-labeler.yml
+++ b/.github/workflows/pull-request.pr-labeler.yml
@@ -2,12 +2,12 @@ name: Update pull request label
 
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    types: [opened]
 
 jobs:
   pull-request-pr-labeler:
-    if: ${{ github.event.action == 'opened' }}
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - uses: TimonVS/pr-labeler-action@v3
         with:
