--- a/.github/workflows/pull-request.test-must-be-succeed.yml
+++ b/.github/workflows/pull-request.test-must-be-succeed.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         node-version: [16.x]
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - name: User Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
